data/derived/comb/progs/unify/prog1664.ml.out
Characters 24-25:
  let _ = makeRand (1, 2) 2;;
                          ^
Error: This expression has type int but an expression was expected of type
         int * int
